// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test PreviewSlider should be disabled when in raw mode and drawing 1`] = `
<div>
  <div
    class="slider"
  >
    Mock Antd Slider
    <p>
      min: 
      50
    </p>
    <p>
      max: 
      2000
    </p>
    <p>
      step: 
      1
    </p>
    <p>
      value: 
      450
    </p>
    <button
      disabled=""
      type="button"
    >
      onChange
    </button>
    <button
      disabled=""
      type="button"
    >
      onChangeComplete
    </button>
  </div>
  <div
    class="value"
  >
    450
  </div>
</div>
`;

exports[`test PreviewSlider should render correctly when previewing Ador 1`] = `
<div>
  <div
    class="slider"
  >
    Mock Antd Slider
    <p>
      min: 
      50
    </p>
    <p>
      max: 
      2000
    </p>
    <p>
      step: 
      1
    </p>
    <p>
      value: 
      450
    </p>
    <button
      type="button"
    >
      onChange
    </button>
    <button
      type="button"
    >
      onChangeComplete
    </button>
  </div>
  <div
    class="value"
  >
    450
  </div>
</div>
`;

exports[`test PreviewSlider should render correctly when previewing Ador 2`] = `
<div>
  <div
    class="slider"
  >
    Mock Antd Slider
    <p>
      min: 
      50
    </p>
    <p>
      max: 
      2000
    </p>
    <p>
      step: 
      1
    </p>
    <p>
      value: 
      0.25
    </p>
    <button
      type="button"
    >
      onChange
    </button>
    <button
      type="button"
    >
      onChangeComplete
    </button>
  </div>
  <div
    class="value"
  >
    0.25
  </div>
</div>
`;

exports[`test PreviewSlider should render correctly when previewing BB2 1`] = `
<div>
  <div
    class="slider"
  >
    Mock Antd Slider
    <p>
      min: 
      50
    </p>
    <p>
      max: 
      2000
    </p>
    <p>
      step: 
      1
    </p>
    <p>
      value: 
      450
    </p>
    <button
      type="button"
    >
      onChange
    </button>
    <button
      type="button"
    >
      onChangeComplete
    </button>
  </div>
  <div
    class="value"
  >
    450
  </div>
</div>
`;

exports[`test PreviewSlider should render correctly when previewing BB2 2`] = `
<div>
  <div
    class="slider"
  >
    Mock Antd Slider
    <p>
      min: 
      50
    </p>
    <p>
      max: 
      2000
    </p>
    <p>
      step: 
      1
    </p>
    <p>
      value: 
      0.25
    </p>
    <button
      type="button"
    >
      onChange
    </button>
    <button
      type="button"
    >
      onChangeComplete
    </button>
  </div>
  <div
    class="value"
  >
    0.25
  </div>
</div>
`;

exports[`test PreviewSlider should render null when not in preview mode 1`] = `<div />`;

exports[`test PreviewSlider should render null when previewing non-fcodeV2 model 1`] = `<div />`;
